--- a/diary_front/src/component/page/diary/css/CustomCalendar.css
+++ b/diary_front/src/component/page/diary/css/CustomCalendar.css
@@ -17,7 +17,12 @@
 }
 
 .special-date {
-    background-color: lemonchiffon; /* 원하는 배경색으로 변경하세요 */
+    background-color: lavenderblush; /* 원하는 배경색으로 변경하세요 */
+}
+
+.react-calendar__tile--active {
+    background-color: #61dafb;
+    color: brown;
 }
 
 button.react-calendar__navigation__label {
